--- a/Dockerfile-Nginx
+++ b/Dockerfile-Nginx
@@ -1,14 +1,12 @@
 FROM nginx
-# Make app directory in the container.
-#RUN mkdir app
 
-# Copy whole code to app directory.
-
+# Del existing nginx files 
 RUN rm -rf //usr/share/nginx/html/index.html
 RUN rm -rf //usr/share/nginx/html/50x.html
+
+#Copy contents of npm build to target container
+
 COPY /build /usr/share/nginx/html/
-
-
 
 # make app directory as the working directory.
 #WORKDIR /app
