--- a/.ci/pods.yaml
+++ b/.ci/pods.yaml
@@ -11,7 +11,7 @@ spec:
   - name: docker-builder
     image: gcr.io/kaniko-project/executor:debug
     command:
-    - /busbox/cat
+    - /busybox/cat
     tty: true
   - name: json-lint
     image: sahsu/docker-jsonlint:latest
