--- a/.local/jenkins-config.yaml
+++ b/.local/jenkins-config.yaml
@@ -11,6 +11,7 @@ Master:
     - git:3.9.1
     - blueocean:1.6.0
     - configuration-as-code:1.0
+    - ssh-agent:1.17
   Memory: 2Gi
 rbac:
   install: true
