Update to base branch * Adding support for pushing via a tag

--- a/.local/jenkins-config.yaml
+++ b/.local/jenkins-config.yaml
@@ -12,6 +12,7 @@ Master:
     - blueocean:1.6.0
     - configuration-as-code:1.0
     - ssh-agent:1.17
+    - tfs:5.142.0
   Memory: 2Gi
 rbac:
   install: true
